# binding-Cpp-SDL2-library

./: meson.build
doc/: meson.build
src/lib/sdl/: meson.build  sdl_core.cpp  sdl_core.hpp  sdl_exception.cpp  sdl_exception.hpp  sdl_forward.hpp  sdl_window.cpp  sdl_window.hpp
src/test/: meson.build  suite.cpp
